--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
 </body>
 <footer class="footer">
-    <a href="https://www.themoviedb.org/?language=en-US" target="_blank" rel="noopener noreferrer"><img style="float: left;padding: 20px;" src="/Users/lara/Downloads/tmdb.png" alt=""></a>
+    <a href="https://www.themoviedb.org/?language=en-US" target="_blank" rel="noopener noreferrer"><img style="float: left;padding: 20px;" src="https://www.themoviedb.org/assets/2/v4/logos/408x161-powered-by-rectangle-green-bb4301c10ddc749b4e79463811a68afebeae66ef43d17bcfd8ff0e60ded7ce99.png" alt=""></a>
 </footer>
 
 </html>
